Add a floating "Home" button to all pages with consistent styling in `style.css`

--- a/assets/html/concerts.html
+++ b/assets/html/concerts.html
@@ -41,6 +41,7 @@
     </style>
 </head>
 <body>
+    <a href="/" class="home-btn">🏠 Home</a>
     <div class="container">
         <h2>🎵 Concerts</h2>
         <div id="concerts-list"></div>
