--- a/assets/html/food.html
+++ b/assets/html/food.html
@@ -76,6 +76,7 @@
     </style>
 </head>
 <body>
+    <a href="/" class="home-btn">🏠 Home</a>
     <div class="container">
         <h2>🍽️ Food Places</h2>
         <div class="filter-section">
