--- a/assets/html/movies.html
+++ b/assets/html/movies.html
@@ -80,6 +80,7 @@
     </style>
 </head>
 <body>
+    <a href="/" class="home-btn">🏠 Home</a>
     <div class="container">
         <h2>🎬 Movies</h2>
         <div class="filter-section">
