--- a/assets/html/tv.html
+++ b/assets/html/tv.html
@@ -41,6 +41,7 @@
     </style>
 </head>
 <body>
+    <a href="/" class="home-btn">🏠 Home</a>
     <div class="container">
         <h2>📺 TV Shows</h2>
         <div id="tv-list"></div>
