--- a/assets/html/books.html
+++ b/assets/html/books.html
@@ -77,6 +77,7 @@
     </style>
 </head>
 <body>
+    <a href="/" class="home-btn">🏠 Home</a>
     <div class="container">
         <h2>📚 Books</h2>
         <div id="books-list"></div>
