--- a/assets/html/journal.html
+++ b/assets/html/journal.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
+<a href="/" class="home-btn">🏠 Home</a>
 
 <div class="container">
     <div class="header-row">
