Added a page for people

--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -123,6 +123,15 @@
                 <div class="nav-description">Explore restaurants and cafes</div>
             </a>
         </div>
+
+        <div class="section-divider">People</div>
+        <div class="nav-grid">
+            <a href="/people" class="nav-card">
+                <div class="nav-icon">👥</div>
+                <div class="nav-title">People</div>
+                <div class="nav-description">View people and details</div>
+            </a>
+        </div>
     </div>
 </body>
 </html>
